--- a/pages/home.html
+++ b/pages/home.html
@@ -2,59 +2,94 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS v5.2.1 -->
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <header>
+    <header>
 
-  </header>
-  <main>
-    <nav class="navbar navbar-expand-sm navbar-light navBar">
-      <div class="container">
-          <a class="navbar-brand text-white" href="#">Buss Inc.</a>
-          <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-              data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavId">
-              <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                  <li class="nav-item">
-                      <a class="nav-link text-white" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link text-white" href="/pages/about.html">About Me</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link text-white" href="/pages/contact.html">Contact</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="/pages/contact.html">Projects</a>
-                </li>
-              </ul>
-          </div>
-      </div>
-  </nav>
+    </header>
+    <main>
+        <nav class="navbar navbar-expand-sm navbar-light navBar">
+            <div class="container">
+                <a class="navbar-brand text-white" href="#">Buss Inc.</a>
+                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavId">
+                    <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/pages/about.html">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/pages/contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/pages/contact.html">Projects</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
 
+        <div class="container-fluid">
+            <div class="row">
+                <h1 class="justify-content-center d-flex mt-5 pt-5">Welcome To My Portofolio</h1>
+            </div>
+            <div>
+                <h5 class="row px-5 pt-5">
+                    Hallo daar! Mijn naam is Lenny Bos en ik ben een enthousiaste 17-jarige softwareontwikkelaar met een
+                    passie voor het bouwen van boeiende webervaringen. Mijn expertise ligt in HTML, CSS en JavaScript,
+                    waarmee ik interactieve en responsieve websites en webapplicaties kan creëren.
+                </h5>
+            </div>
+            <h5 class="row px-5">
+                Ik geniet van het ontdekken van nieuwe mogelijkheden en het uitbreiden van mijn vaardigheden in de
+                front-end ontwikkeling. Met een scherp oog voor detail en een streven naar gebruiksvriendelijkheid,
+                streef ik ernaar om aantrekkelijke gebruikersinterfaces te ontwerpen en vloeiende navigatie te creëren.
+            </h5>
+        </div>
+        <h5 class="row px-5">
+            Daarnaast ben ik ook bekend met verschillende frameworks en bibliotheken, zoals Bootstrap en jQuery, die ik
+            graag gebruik om de ontwikkelingstijd te versnellen en de functionaliteit van mijn projecten te verbeteren.
+        </h5>
+        </div>
+        <h5 class="row px-5">
+            In mijn portfolio vind je een verzameling van mijn recente projecten, waar ik mijn creativiteit en
+            technische vaardigheden heb toegepast om resultaten van hoge kwaliteit te leveren. Ik blijf altijd
+            gemotiveerd om mijn kennis verder uit te breiden en nieuwe uitdagingen aan te gaan. </h5>
+        </div>
+        </div>
+        </div>
 
-  </main>
-  <footer>
 
-  </footer>
+    </main>
+    <footer>
 
-  <script src="/js/main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
-  </script>
+    </footer>
+
+    <script src="/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
+    </script>
 </body>
 
 </html>
