added new bg to home and text

--- a/pages/home.html
+++ b/pages/home.html
@@ -43,10 +43,15 @@
         </nav>
     </header>
     <main>
-        <div class="container">
-            <h1 class="justify-content-center d-flex py-5">Welcome to my portfolio!</h1>
+
+        <div class="bg-image d-flex justify-content-center">
+            <img src="../media/Kendrick-Lamar-at-Glastonbury-2022.jpg" alt="">
         </div>
-        <img id=img height=40 src="https://lh3.googleusercontent.com/a-/AOh14Gh-CwvGkngFp6REJf46ncZD2p-nesp_4DmKOpSXGA=k-s420"/>
+
+        <div class="bg-text">
+          <h1>I am John Doe</h1>
+          <p>And I'm a Photographer</p>
+        </div>
     </main>
     <footer>
 
