added the background and made it responsive

--- a/pages/home.html
+++ b/pages/home.html
@@ -44,9 +44,9 @@
     </header>
     <main>
 
-        <div class="bg-image d-flex justify-content-center">
+        <!-- <div class="bg-image d-flex justify-content-center">
             <img src="../media/Kendrick-Lamar-at-Glastonbury-2022.jpg" alt="">
-        </div>
+        </div> -->
 
         <div class="bg-text">
           <h1>I am John Doe</h1>
