made about me responsive and look good

--- a/pages/home.html
+++ b/pages/home.html
@@ -44,13 +44,9 @@
     </header>
     <main>
 
-        <!-- <div class="bg-image d-flex justify-content-center">
-            <img src="../media/Kendrick-Lamar-at-Glastonbury-2022.jpg" alt="">
-        </div> -->
-
         <div class="bg-text">
-          <h1>I am John Doe</h1>
-          <p>And I'm a Photographer</p>
+          <h1>I am Lenny</h1>
+          <p>And I'm a Software Developer</p>
         </div>
     </main>
     <footer>
