--- a/pages/about.html
+++ b/pages/about.html
@@ -2,86 +2,88 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+    <title>Title</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="../css/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/about.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-sm navbar-light navBar">
-        <div class="container">
-            <a class="navbar-brand text-white" href="#">Buss Inc.</a>
-            <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../pages/home.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="/pages/about.html">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="/pages/contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="/pages/contact.html">Projects</a>
-                    </li>
-                </ul>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-light navBar">
+            <div class="container">
+                <a class="navbar-brand text-white" href="#">Buss Inc.</a>
+                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavId">
+                    <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="../pages/home.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/pages/about.html">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/pages/contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/pages/contact.html">Projects</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+    </header>
+    <main>
+
+
+        <div class="container bg-text justify-content-center">
+
+            <h5 class="row px-5 pt-5">
+                Hello there! My name is Lenny, and I'm an enthusiastic 17-year-old software developer with a passion
+                for building engaging web experiences. My expertise lies in HTML, CSS, and JavaScript, which allows me
+                to
+                create interactive and responsive websites and web applications. </h5>
+            <h5 class="row px-5 my-2">
+                I enjoy exploring new possibilities and expanding my skills in front-end development. With a keen eye
+                for detail and a focus on usability, I strive to design attractive user interfaces and create smooth
+                navigation.
+                Additionally, I am familiar with Bootstrap, which I
+                like to utilize to speed up development time and enhance the functionality of my projects. In my
+                portfolio, you will find a collection
+            </h5>
+            <h5 class="row px-5 my-1">
+                of my recent projects where I have applied my creativity and
+                technical skills to deliver high-quality results. I always remain motivated to expand my knowledge
+                further and take on new challenges.
+            </h5>
+            <h5 class="row p-5 my-1 justify-content-center">
+                Please take a look around the website to get more information about me and my projects. If you have any
+                questions, feel free to contact me
+            </h5>
         </div>
-    </nav>
-  </header>
-  <main>
 
+        
+    </main>
+    <footer>
 
-    <div class="container-fluid">
+    </footer>
 
-        <h5 class="row px-5 pt-5">
-            Hello there! My name is Lenny Bos, and I'm an enthusiastic 17-year-old software developer with a passion
-            for building engaging web experiences. My expertise lies in HTML, CSS, and JavaScript, which allow me to
-            create interactive and responsive websites and web applications. </h5>
-        <h5 class="row px-5">
-            I enjoy exploring new possibilities and expanding my skills in front-end development. With a keen eye
-            for detail and a focus on usability, I strive to design attractive user interfaces and create smooth
-            navigation.
-        </h5>
-        <h5 class="row px-5">
-            Additionally, I am familiar with various frameworks and libraries such as Bootstrap and jQuery, which I
-            like to utilize to speed up development time and enhance the functionality of my projects.
-        </h5>
-        <h5 class="row px-5">
-            In my portfolio, you will find a collection of my recent projects where I have applied my creativity and
-            technical skills to deliver high-quality results. I always remain motivated to expand my knowledge
-            further and take on new challenges.
-        </h5>
-    </div>
-    <h5 class="m-5">
-        Please take a look around the website to get more information about me and my projects. If you have any
-        questions, feel free to contact me.
-    </h5>
-
-  </main>
-  <footer>
-
-  </footer>
-
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
+    <script src="../js/about.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
