added button and made a little start to js

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
     <main>
 
 
-        <div class="container bg-text justify-content-center">
+        <div class="container bg-text justify-content-center aboutText">
 
             <h5 class="row px-5 pt-5">
                 Hello there! My name is Lenny, and I'm an enthusiastic 17-year-old software developer with a passion
@@ -69,9 +69,9 @@
                 Please take a look around the website to get more information about me and my projects. If you have any
                 questions, feel free to contact me
             </h5>
+            <a name="" id="" class="btn btn-danger btnContinue justify-content-center align-content-center" href="#" role="button">Continue</a>
         </div>
 
-        
     </main>
     <footer>
 
