--- a/pages/about.html
+++ b/pages/about.html
@@ -72,6 +72,17 @@
             <a name="" id="" class="btn btn-danger btnContinue justify-content-center align-content-center" href="#" role="button">Continue</a>
         </div>
 
+        <div class="container buttonTopic hide">
+        <h3 class="text-white justify-content-center d-flex p-2 my-5">Please pick a topic</h3>
+
+    <div class="container justify-content-center d-flex gap-3 btnChoice">
+        
+        <button type="button" class="btn btn-danger">Gaming</button>
+        <button type="button" class="btn btn-danger">Music</button>
+        <button type="button" class="btn btn-danger">Series</button>
+    </div>
+</div>
+
     </main>
     <footer>
 
