--- a/pages/about.html
+++ b/pages/about.html
@@ -72,16 +72,13 @@
             <a name="" id="" class="btn btn-danger btnContinue justify-content-center align-content-center" href="#" role="button">Continue</a>
         </div>
 
-        <div class="container buttonTopic hide">
-        <h3 class="text-white justify-content-center d-flex p-2 my-5">Please pick a topic</h3>
-
-    <div class="container justify-content-center d-flex gap-3 btnChoice">
+        <div class="container buttonTopic hide flex-column justify-content-center align-content-center py-5">
+            <button type="button" class="btn btnMusic my-3"></button>
+            <button type="button" class="btn btnGaming"></button>
+            <button type="button" class="btn btnSeries"></button>
+        </div>
         
-        <button type="button" class="btn btn-danger">Gaming</button>
-        <button type="button" class="btn btn-danger">Music</button>
-        <button type="button" class="btn btn-danger">Series</button>
-    </div>
-</div>
+
 
     </main>
     <footer>
