--- a/pages/about.html
+++ b/pages/about.html
@@ -35,7 +35,7 @@
                             <a class="nav-link text-white" href="/pages/contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="/pages/contact.html">Projects</a>
+                            <a class="nav-link text-white" href="/pages/projects.html">Projects</a>
                         </li>
                     </ul>
                 </div>
