made the project look good

--- a/pages/about.html
+++ b/pages/about.html
@@ -69,7 +69,7 @@
                 Please take a look around the website to get more information about me and my projects. If you have any
                 questions, feel free to contact me
             </h5>
-            <a name="" id="" class="btn btn-danger btnContinue justify-content-center align-content-center" href="#" role="button">Continue</a>
+            <!-- <a name="" id="" class="btn btn-danger btnContinue justify-content-center align-content-center" href="#" role="button">Continue</a> -->
         </div>
 
         <div class="container buttonTopic hide flex-column justify-content-center align-content-center py-5">
