added some pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <button class="nav-link text-white nav-bar-item nav-home" href="">Home</button>
                         </li>
                         <li class="nav-item">
-                            <button class="nav-link text-white nav-bar-item nav-about" href="">About</button>
+                            <button class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</button>
                         </li>
                         <li class="nav-item">
                             <button class="nav-link text-white nav-bar-item nav-contact"
@@ -56,23 +56,10 @@
                         <br>
                         Please take a look around my website, have fun!
                     </p>
-
+    
                 </div>
                 <div class="col-md">
-                    <img class="gojoImg" src="./media/Satoru_Gojo_29.webp" alt="">
-                </div>
-            </div>
-        </div>
-
-        <div class="container about-section py-5">
-            <div class="row about-me">
-                <div class="col-md">
-                    <h1>
-                        About me
-                    </h1>
-                    <p>
-                        I'm 17 years old
-                    </p>
+                    <img class="gojoImg" src="../media/Satoru_Gojo_29" alt="">
                 </div>
             </div>
         </div>
