changed img and css

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
                 </div>
                 <div class="col-md">
-                    <img class="gojoImg" src="../media/Satoru_Gojo_29" alt="">
+                    <img class="gojoImg" src="/media/R.png" alt="">
                 </div>
             </div>
         </div>
