--- a/pages/about.html
+++ b/pages/about.html
@@ -2,51 +2,50 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/about.css">
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/about.css">
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-sm navbar-light navBar">
-      <div class="container">
-          <a class="navbar-brand text-white nav-bar-item" href="#">Lenny</a>
-          <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-              data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavId">
-              <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                  <li class="nav-item">
-                      <button class="nav-link text-white nav-bar-item nav-home" href="">Home</button>
-                  </li>
-                  <li class="nav-item">
-                      <button class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</button>
-                  </li>
-                  <li class="nav-item">
-                      <button class="nav-link text-white nav-bar-item nav-contact"
-                          href="/pages/contact.html">Contact</button>
-                  </li>
-                  <li class="nav-item">
-                      <button class="nav-link text-white nav-bar-item nav-projects"
-                          href="/pages/projects.html">Projects</button>
-                  </li>
-              </ul>
-          </div>
-      </div>
-  </nav>
-  </header>
-  <main>
-
-    <div class="container about-section py-5">
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-light navBar">
+            <div class="container">
+                <a class="navbar-brand text-white nav-bar-item" href="#">Lenny</a>
+                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavId">
+                    <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
+                        <li class="nav-item">
+                            <button class="nav-link text-white nav-bar-item nav-home" href="">Home</button>
+                        </li>
+                        <li class="nav-item">
+                            <button class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</button>
+                        </li>
+                        <li class="nav-item">
+                            <button class="nav-link text-white nav-bar-item nav-contact"
+                                href="/pages/contact.html">Contact</button>
+                        </li>
+                        <li class="nav-item">
+                            <button class="nav-link text-white nav-bar-item nav-projects"
+                                href="/pages/projects.html">Projects</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+      <div class="container about-section py-5">
         <div class="row about-me">
             <div class="col-md">
                 <h1>
@@ -57,19 +56,20 @@
                 </p>
             </div>
         </div>
-    </div>
-  </main>
-  <footer>
-    <!-- place footer here -->
-  </footer>
-  <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
+        </div>
+    </main>
+    <footer>
+        <a href=""><img class="w-100 svgImg" src="./media/discord-icon-svgrepo-com.svg" alt=""></a>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
+    <script src="/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
+    </script>
 </body>
 
 </html>
