added imgs, added redirects

--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
                     <p>
                         I am a web developer
                         <br>
-                        Please take a look around my website, have fun!
+                        <br>
+                        Please take a look around my website, have fun! I created this website for the purpose of 
+                        letting people know who I am and what I do, I hope this can give you some information about
+                        who I am and what I do. I made the website using Html, Css, Javascript, Bootstrap.
                     </p>
-    
+                    
                 </div>
                 <div class="col-md">
                     <img class="gojoImg" src="/media/R.png" alt="">
