--- a/pages/about.html
+++ b/pages/about.html
@@ -26,18 +26,18 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
                         <li class="nav-item">
-                            <button class="nav-link text-white nav-bar-item nav-home" href="">Home</button>
+                            <a class="nav-link text-white nav-bar-item nav-home" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <button class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</button>
+                            <a class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <button class="nav-link text-white nav-bar-item nav-contact"
-                                href="/pages/contact.html">Contact</button>
+                            <a class="nav-link text-white nav-bar-item nav-contact"
+                                href="/pages/contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <button class="nav-link text-white nav-bar-item nav-projects"
-                                href="/pages/projects.html">Projects</button>
+                            <a class="nav-link text-white nav-bar-item nav-projects"
+                                href="/pages/projects.html">Projects</a>
                         </li>
                     </ul>
                 </div>
@@ -52,14 +52,18 @@
                     About me
                 </h1>
                 <p>
-                    I'm 17 years old
+                    I'm a 17 year old Software Developer from The Netherlands, I'm currently studying at the
+                     ROC van The Hague. Also I'm  working on a few projects, one of them is a Dashboard.
+                     I'm also working on a website for a friend of mine.
                 </p>
+            </div>
+            <div class="col-md">
+                <img class="gojoImg" src="/media/Fresh.webp" alt="">
             </div>
         </div>
         </div>
     </main>
     <footer>
-        <a href=""><img class="w-100 svgImg" src="./media/discord-icon-svgrepo-com.svg" alt=""></a>
     </footer>
 
     <script src="/js/main.js"></script>
