added the new pages + made a base  for what theyre gonna look like

--- a/index.html
+++ b/index.html
@@ -62,13 +62,15 @@
                     
                 </div>
                 <div class="col-md">
-                    <img class="gojoImg" src="/media/R.png" alt="">
+                    <img class="my-3 gojoImg" src="/media/R.png" alt="">
                 </div>
             </div>
         </div>
     </main>
     <footer>
-        <a href=""><img class="w-100 svgImg" src="./media/discord-icon-svgrepo-com.svg" alt=""></a>
+        <div class="my-5 row"></div>
+        <div class="my-5 row"></div>
+        <a href=""><img class="my-5 w-100 svgImg" src="./media/discord-icon-svgrepo-com.svg" alt=""></a>
     </footer>
 
     <script src="/js/main.js"></script>
