--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="/css/contact.css">
 </head>
 
 <body>
@@ -29,7 +29,8 @@
                             <a class="nav-link text-white nav-bar-item nav-home" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</a>
+                            <a class="nav-link text-white nav-bar-item nav-about aboutNav"
+                                href="/pages/about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white nav-bar-item nav-contact"
@@ -45,36 +46,32 @@
         </nav>
     </header>
     <main>
-      <div class="container about-section py-5">
-        <div class="row about-me">
-            <div class="col-md">
-                <h1>
-                    About me
-                </h1>
-                <p>
-                    I'm a 17 year old Software Developer from The Netherlands, I'm currently studying at the
-                     ROC van The Hague. Also I'm  working on a few projects, one of them is a Dashboard.
-                     I'm also working on a website for a friend of mine.
 
-                     <br>
-                    <br>
-
-                     I've been interested in programming for a really long time and this year I finally started learning some languages like HTML, CSS, and JavaScript.
-                     After I've finished my current study I'm planning on going to a university or if i like the company where ill do my internship I'll stay there.
-                     I hope in the future of my coding career I can really express my own style and creativity in my projects. But also stay professional and make sure my code is readable and understandable for other people.
-
-                    <br>
-                    <br>
-
-                    I like going to the gym to work on my body and I also like to play games with my friends, such as Overwatch, Minecraft and Diablo. I also really enjoy reading books/manga.
-                    
-                </p>
+        <div class="container py-5 my-5">
+            <h1>Contact</h1>
+            <div class="py-2 row"></div>
+            <div class="row">
+                <div class="col-sm">
+                    <input class="inputTopic" type="text">
+                </div>
             </div>
-            <div class="col-md">
-                <img class="gojoImg" src="/media/Fresh.webp" alt="">
+            <div class="py-5 row">
+                <div class="pb-5 col-sm">
+                    <input class="inputQuestion" type="text">
+                </div>
+            </div>
+            <div class="pt-5 mt-5 row">
+                <div class="pt-5 col-sm">
+                    <input class="inputEmail" type="text">
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-sm">
+                    <button class="submitBtn">Submit</button>
+                </div>
             </div>
         </div>
-        </div>
+
     </main>
     <footer>
     </footer>
