added imgs for the projects

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
                         <li class="nav-item">
-                            <button class="nav-link text-white nav-bar-item nav-home" href="">Home</button>
+                            <a class="nav-link text-white nav-bar-item nav-home" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <button class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</button>
+                            <a class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <button class="nav-link text-white nav-bar-item nav-contact"
-                                href="/pages/contact.html">Contact</button>
+                            <a class="nav-link text-white nav-bar-item nav-contact"
+                                href="/pages/contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <button class="nav-link text-white nav-bar-item nav-projects"
-                                href="/pages/projects.html">Projects</button>
+                            <a class="nav-link text-white nav-bar-item nav-projects"
+                                href="/pages/projects.html">Projects</a>
                         </li>
                     </ul>
                 </div>
