--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,8 +29,7 @@
                             <a class="nav-link text-white nav-bar-item nav-home" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-about aboutNav"
-                                href="/pages/about.html">About</a>
+                            <a class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white nav-bar-item nav-contact"
