--- a/pages/projects.html
+++ b/pages/projects.html
@@ -29,8 +29,7 @@
                             <a class="nav-link text-white nav-bar-item nav-home" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-about aboutNav"
-                                href="/pages/about.html">About</a>
+                            <a class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white nav-bar-item nav-contact"
@@ -54,10 +53,10 @@
 
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
-                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                        <div class="front" style="background-image: url(../media/dashboard.png)">
                             <div class="inner">
-                                <p>Diligord</p>
-                                <span>Lorem ipsum</span>
+                                <p>Dashboard</p>
+                                <span>Hover</span>
                             </div>
                         </div>
                         <div class="back">
@@ -71,10 +70,10 @@
                 </div>
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
-                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                        <div class="front" style="background-image: url(../media/higherlower.png)">
                             <div class="inner">
-                                <p>Rocogged</p>
-                                <span>Lorem ipsum</span>
+                                <p>Higher Lower</p>
+                                <span>Hover</span>
                             </div>
                         </div>
                         <div class="back">
@@ -88,10 +87,10 @@
                 </div>
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
-                        <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+                        <div class="front" style="background-image: url(../media/id.png)">
                             <div class="inner">
-                                <p>Strizzes</p>
-                                <span>Lorem ipsum</span>
+                                <p>Interaction Design</p>
+                                <span>Hover</span>
                             </div>
                         </div>
                         <div class="back">
@@ -107,10 +106,10 @@
             <div class="row">
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
-                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                        <div class="front" style="background-image: url(../media/pokemon.png)">
                             <div class="inner">
-                                <p>Diligord</p>
-                                <span>Lorem ipsum</span>
+                                <p>Pokemon</p>
+                                <span>Hover</span>
                             </div>
                         </div>
                         <div class="back">
@@ -124,10 +123,10 @@
                 </div>
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
-                        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                        <div class="front" style="background-image: url(../media/tictactoe.png)">
                             <div class="inner">
-                                <p>Rocogged</p>
-                                <span>Lorem ipsum</span>
+                                <p>Tic Tac Toe</p>
+                                <span>Hover</span>
                             </div>
                         </div>
                         <div class="back">
@@ -141,10 +140,10 @@
                 </div>
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
-                        <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+                        <div class="front" style="background-image: url(../media/webcatalogus.png)">
                             <div class="inner">
-                                <p>Strizzes</p>
-                                <span>Lorem ipsum</span>
+                                <p>Web Catalogus</p>
+                                <span>Hover</span>
                             </div>
                         </div>
                         <div class="back">
