added responsive mediaquery to contact

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Lenny</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -63,6 +63,33 @@
                 </div>
                 <div class="col-md">
                     <img class="my-3 gojoImg" src="/media/R.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="row pt-5 mt-5"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md my-5 py-5">
+                    <h1>
+                        The Website Details
+                    </h1>
+                    <p>
+                        I am a web developer
+                        <br>
+                        <br>
+                        Here I'll show you the details of the website, I made this website using Html, Css, Javascript, Bootstrap.
+                        <br>
+                        I'll also show some extra info for the portfolio.
+                    </p>
+                </div>
+                <div class="row mt-1"></div>
+                <div class="col-md my-3 py-3">
+                    <h3>
+                        The Website Details
+                    </h3>
+                    <div class="col">
+                        <img src="../lennyaaaa.github.io/media/color palette.png" alt="aaa">
+                    </div>
                 </div>
             </div>
         </div>
