--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,7 +46,7 @@
     </header>
     <main>
 
-        <div class="container py-5 my-5">
+        <div class="container py-5 my-5 contactForm">
             <h1>Contact</h1>
             <div class="py-2 row"></div>
             <div class="row">
