added sitemap and remodeled the projects page

--- a/index.html
+++ b/index.html
@@ -85,10 +85,21 @@
                 <div class="row mt-1"></div>
                 <div class="col-md my-3 py-3">
                     <h3>
-                        The Website Details
+                        Color Palette
                     </h3>
-                    <div class="col">
-                        <img src="../lennyaaaa.github.io/media/color palette.png" alt="aaa">
+                    <p>This is the color palette I've used for the website.</p>
+                    <div class="col-md">
+                        <img class="my-3 gojoImg" src="/media/color palette.png" alt="">
+                    </div>
+                </div>
+                <div class="row mt-1"></div>
+                <div class="col-md my-3 py-3">
+                    <h3>
+                        Sitemap
+                    </h3>
+                    <p>This is the sitemap I've made for the website.</p>
+                    <div class="col-md">
+                        <img class="my-3 gojoImg" src="/media/sitemap.png" alt="">
                     </div>
                 </div>
             </div>
