--- a/pages/projects.html
+++ b/pages/projects.html
@@ -29,7 +29,8 @@
                             <a class="nav-link text-white nav-bar-item nav-home" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</a>
+                            <a class="nav-link text-white nav-bar-item nav-about aboutNav"
+                                href="/pages/about.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white nav-bar-item nav-contact"
@@ -48,61 +49,26 @@
 
         <div class="wrapper">
             <h1 class="text-white">Projects</h1>
-            <div class="row"></div>
-            <div class="cols">
 
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
-                    <div class="container">
-                        <div class="front" style="background-image: url(../media/dashboard.png)">
-                            <div class="inner">
-                                <p>Dashboard</p>
-                                <span>Hover</span>
-                            </div>
-                        </div>
-                        <div class="back">
-                            <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
-                                    quae suscipit c.</p>
-                                <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
-                            </div>
+            <div class="row">
+            <div class="col" ontouchstart="this.classList.toggle('hover');">
+                <div class="container">
+                    <div class="front" style="background-image: url(../media/id.png)">
+                        <div class="inner">
+                            <p>Interaction Design</p>
+                            <span>Hover</span>
                         </div>
                     </div>
-                </div>
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
-                    <div class="container">
-                        <div class="front" style="background-image: url(../media/higherlower.png)">
-                            <div class="inner">
-                                <p>Higher Lower</p>
-                                <span>Hover</span>
-                            </div>
-                        </div>
-                        <div class="back">
-                            <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
-                                    quae suscipit c.</p>
-                                <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
-                    <div class="container">
-                        <div class="front" style="background-image: url(../media/id.png)">
-                            <div class="inner">
-                                <p>Interaction Design</p>
-                                <span>Hover</span>
-                            </div>
-                        </div>
-                        <div class="back">
-                            <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
-                                    quae suscipit c.</p>
-                                <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
-                            </div>
+                    <div class="back">
+                        <div class="inner">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
+                                quae suscipit c.</p>
+                            <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
                         </div>
                     </div>
                 </div>
             </div>
+    </div>
             <div class="row">
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
@@ -121,6 +87,8 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
                         <div class="front" style="background-image: url(../media/tictactoe.png)">
@@ -138,6 +106,8 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
                         <div class="front" style="background-image: url(../media/webcatalogus.png)">
@@ -156,6 +126,45 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                    <div class="container">
+                        <div class="front" style="background-image: url(../media/dashboard.png)">
+                            <div class="inner">
+                                <p>Dashboard</p>
+                                <span>Hover</span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
+                                    quae suscipit c.</p>
+                                <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                    <div class="container">
+                        <div class="front" style="background-image: url(../media/higherlower.png)">
+                            <div class="inner">
+                                <p>Higher Lower</p>
+                                <span>Hover</span>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="inner">
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
+                                    quae suscipit c.</p>
+                                <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
 
 
