added two placeholders

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -51,7 +51,7 @@
             <div class="py-2 row"></div>
             <div class="row">
                 <div class="col-sm">
-                    <input class="inputTopic" type="text">
+                    <input placeholder=" Topic" class="inputTopic" type="text">
                 </div>
             </div>
             <div class="py-5 row">
@@ -61,7 +61,7 @@
             </div>
             <div class="pt-5 mt-5 row">
                 <div class="pt-5 col-sm">
-                    <input class="inputEmail" type="text">
+                    <input placeholder=" E-mail" class="inputEmail" type="text">
                 </div>
             </div>
             <div class="row mt-5">
