Renamed buttons 'Click'

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <footer>
         <div class="my-5 row"></div>
         <div class="my-5 row"></div>
-        <a href=""><img class="my-5 w-100 svgImg" src="./media/discord-icon-svgrepo-com.svg" alt=""></a>
+        <a href="https://github.com/lennyaaaa"><img class="my-5 w-100 svgImg" src="./media/discord-icon-svgrepo-com.svg" alt=""></a>
     </footer>
 
     <script src="/js/main.js"></script>
