--- a/pages/projects.html
+++ b/pages/projects.html
@@ -62,7 +62,7 @@
                     <div class="back">
                         <div class="inner">
                             <p>This was a project I made with a group in school where we made up the idea to make a portable voting application, which you can use to vote from anywhere from your phone.</p>
-                            <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-interactiondesign-examen-uitwerking-shisha-tech.git" role="button">Button</a>
+                            <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-interactiondesign-examen-uitwerking-shisha-tech.git" role="button">Click</a>
                         </div>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                         <div class="back">
                             <div class="inner">
                                 <p>This was a project we had to make for school game related, I chose to make a pokemon fighting game. I haven't got around to finish it but maybe in the future I will.</p>
-                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-themaweek-2-t1k-lennyaaaa.git" role="button">Button</a>
+                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-themaweek-2-t1k-lennyaaaa.git" role="button">Click</a>
                             </div>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                         <div class="back">
                             <div class="inner">
                                 <p>This is a Tic Tac Toe game we had to make for a project, I chose to make it themed and have a story around the anime/manga named Chainsaw Man.</p>
-                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-project-p02-boter-kaas-en-eieren-lennyaaaa.git" role="button">Button</a>
+                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-project-p02-boter-kaas-en-eieren-lennyaaaa.git" role="button">Click</a>
                             </div>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                         <div class="back">
                             <div class="inner">
                                 <p>This was a project we had to make for school to get used to API and processing all the data and using it in our websites. I had learned a lot from this and can now work way more easily with API's.</p>
-                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-p03-project-webcatalogus-t1k-fc-muzaza.git" role="button">Button</a>
+                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-p03-project-webcatalogus-t1k-fc-muzaza.git" role="button">Click</a>
                             </div>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
                         <div class="back">
                             <div class="inner">
                                 <p>This was a dashboard application where we had to make a website where you could find info on various subjects which we showed with API's. I made the FAQ/Support and the crypto dashboard page!</p>
-                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-p04-project-dashboard-team-lenny-boss.git" role="button">Button</a>
+                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-p04-project-dashboard-team-lenny-boss.git" role="button">Click</a>
                             </div>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                         <div class="back">
                             <div class="inner">
                                 <p>This was a Higher Lower game we had to make in a group of two people this was our first project of the year.</p>
-                                <a name="" id="" class="btn btn-primary" href="https://github.com/dvangeest/higher-lower.git" role="button">Button</a>
+                                <a name="" id="" class="btn btn-primary" href="https://github.com/dvangeest/higher-lower.git" role="button">Click</a>
                             </div>
                         </div>
                     </div>
