--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,22 +1,33 @@
-<!-- projects.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects Page</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="/style/style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
     <div class="terminal-wrapper">
         <div class="terminal">
             <div class="terminal-header">
-                <a href="selector.html"><span class="terminal-button red"></span></a>
-                <a href="selector.html"><span class="terminal-button yellow"></span></a>
-                <a href="selector.html"><span class="terminal-button green"></span></a>
+                <a href="selector.html"><div class="terminal-button red"></div></a>
+                <a href="selector.html"><div class="terminal-button yellow"></div></a>
+                <a href="selector.html"><div class="terminal-button green"></div></a>
             </div>
-            <div class="terminal-body" id="terminalBody">
-                <!-- Content of your projects page goes here -->
+            <div class="terminal-body">
+                <h1>Projects</h1>
+                <div class="project-info">
+                    <h2>Sushi Store</h2>
+                    <p>Repository: <a href="https://github.com/ROCMondriaanTIN/sd22-p5-projectzuzu-lennyaaaa.git">https://github.com/ROCMondriaanTIN/sd22-p5-projectzuzu-lennyaaaa.git</a></p>
+                </div>
+                <div class="project-info">
+                    <h2>Calculator</h2>
+                    <p>Repository: <a href="https://github.com/ROCMondriaanTIN/sd23-p03-revenge-of-javascript-lenny-b2k.git">https://github.com/ROCMondriaanTIN/sd23-p03-revenge-of-javascript-lenny-b2k.git</a></p>
+                </div>
+                <div class="project-info">
+                    <h2>Politiek Info</h2>
+                    <p>Repository: <a href="https://github.com/ROCMondriaanTIN/sd22-interactiondesign-examen-uitwerking-shisha-tech.git">https://github.com/ROCMondriaanTIN/sd22-interactiondesign-examen-uitwerking-shisha-tech.git</a></p>
+                </div>
             </div>
         </div>
     </div>
